# zaWRka-project

./: .gitattributes  .gitignore  .gitmodules  2019-11-09-13-15-28.bag  README.md  catkin_build.sh  get_tty_info.sh  install_detector.sh  install_device_rules.sh  install_pkgs.sh  install_target_stlink.sh  install_user_permissions.sh  newfile.txt  prepare_ros.sh  requirements.txt  ros_nuc_master.sh  setup_nuc_master.sh  sync_target.sh
car_parking/: CMakeLists.txt  package.xml
car_parking/launch/: car_parking.launch  test.launch
car_parking/msg/: Points2D.msg  Polygons.msg  Statuses.msg
car_parking/scripts/: car_parking_test.py  test_pub_and_sub.py
car_parking/src/: parking_core.cpp  parking_node.cpp
wr8_description/: CMakeLists.txt  package.xml
wr8_description/config/: controllers.yaml
wr8_description/launch/: gazebo.launch  sim_base_system.launch  test_model.launch
wr8_description/plugins/: car_interface.cpp  car_interface.h  traffic_light.cpp  traffic_light.h
wr8_description/rviz/: model_view.rviz  nav_demo.rviz
wr8_description/urdf/: model.urdf.xacro  traxxas-2020.urdf.xacro  zawrka.urdf.xacro
wr8_description/worlds/: RFMaze.v2.world  RFMaze.world  maze2020v1.world
wr8_software/: CMakeLists.txt  debug_jtx_client.sh  debug_jtx_master.sh  package.xml  prepare.sh  ros_pkgs.sh  start_base.sh  start_debug.sh  stop_base.sh  sync_target.sh  wr8_base.sh  wr8_debug.sh  wr8_stop.sh
wr8_software/config/: costmap_common_params.yaml  ekf.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  maze2020v1.yaml  maze2020v2.yaml  move_base_params.yaml  rtabmap_params.yaml  solver_config.yaml  teb_local_planner_params-2020.yaml  teb_local_planner_params.yaml
wr8_software/fast_config/: costmap_common_params.yaml  global_costmap_params.yaml  teb_local_planner_params.yaml
wr8_software/launch/: _start_local_sim.launch  _start_robot.launch  _start_sim.launch  base_launch.launch  base_start.launch  cameras_view.launch  debug_launch.launch  elp_rtabmap.launch  full_move_base_control.launch  full_start_joy_control.launch  gmapping.launch  gui_server.launch  gz_localization.launch  gz_slam.launch  keyboard_control.launch  localization.launch  mono_calib.launch  mono_slam.launch  move_base.launch  playbag.launch  real_robot_start.launch  real_slam_start.launch  record_cameras_bag.launch  rviz_lidar_view.launch  rviz_localization_view.launch  rviz_slam_view.launch  rviz_stereo_view.launch  serial_uc_link.launch  slam.launch  slam_stereo.launch  slam_view.launch  start.launch  (+3 more)
(+512 files in other folders)
